--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-particles-js": "^3.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
     "react-typed": "^1.2.0"
   },
   "scripts": {
